ci: add token for JuliaHub that will provide access to JuliaHubRegistry

--- a/.buildkite/run_benchmark.yml
+++ b/.buildkite/run_benchmark.yml
@@ -14,6 +14,8 @@ steps:
             - BUILDKITE_S3_ACCESS_KEY_ID="U2FsdGVkX1+x3xs1ZRRZRt3FmwFQmYYKnpV7o8xKkX5Ib6y0o5fv0+rskVAj+JKu"
             - BUILDKITE_S3_SECRET_ACCESS_KEY="U2FsdGVkX1+LWh1yX7LsMBlecEJLc08eJrgOhurhd47CY1/jS3wCGVCQmS1t6f2j70spBoFdfc9kn2naj8HH5A==" 
             - BUILDKITE_S3_DEFAULT_REGION="U2FsdGVkX18ccoE9FmtkwsCm1x0MLMBlN/FLcAyKkY4="
+          files:
+            - .buildkite/secrets/token.toml
       - JuliaCI/julia#v1:
           version: "1.10"
       - staticfloat/sandbox:
